// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rewrites illustration import to S2 with name change 1`] = `
"import { IllustratedMessage, Heading, Content } from "@react-spectrum/s2";
import NoSearchResults from "@react-spectrum/s2/illustrations/linear/NoSearchResults";

<div>
  <IllustratedMessage>
    <NoSearchResults />
    <Heading>No results</Heading>
    <Content>Try another search</Content>
  </IllustratedMessage>
</div>"
`;

exports[`Rewrites illustration import to S2 with same name 1`] = `
"import { IllustratedMessage, Heading, Content } from "@react-spectrum/s2";
import Upload from "@react-spectrum/s2/illustrations/linear/Upload";

<div>
  <IllustratedMessage>
    <Upload />
    <Heading>Upload a file</Heading>
    <Content>Drag and drop to upload</Content>
  </IllustratedMessage>
</div>"
`;
